------------------------------

NEW FUNCTIONS ADDED:
  * 

UPDATED FUNCTIONS:
  * CochranArmitageTest has been updated to use scores instead of ordinal values only.
    Further the alternatives have been reduced to c("two.sided", "one.sided") 
    instead of c("two.sided", "increasing", "decreasing"), which were poorly defined.
  * BoxedText gains a formula interface.  
  
BUGFIXES:
  * JonckheereTest's formula interface will now also support additional 
    arguments.
  * Bug in Cohen Kappa SE calculation fixed.  




DescTools 0.99.44 (2021-11-22)  
------------------------------

NEW FUNCTIONS ADDED:
  * PlotProbDist() is a convenience interface for plotting probability 
    distributions with shaded areas.
  * rSum21() returns random numbers which sum to 1, allowing to define digits  

UPDATED FUNCTIONS:
  * Recode() will accept characters and in this case also return a character vector.
  * BarText() will also support stacked barplots for naming the groups.  
  
BUGFIXES:
  * AUC() did not handle missing values correctly. (Credits to Denise Horn-Oudshoorn)




DescTools 0.99.43 (2021-09-08)  
------------------------------

UPDATED FUNCTIONS:
  * An adaptation to a change in the function exact.test, used in 
    BarnardTest(). (Credits to Peter Calhoun)
  
BUGFIXES:
  * Main title in PlotQQ was not updated correctly.
  * Stuart-Maxwell test would not have stated the perfect agreement correctly.
    (Credits to Yusef Al-Naher)




DescTools 0.99.42 (2021-06-16)
------------------------------

NEW FUNCTIONS ADDED:
  * PlotDotCI() is a convenience interface for PlotDot() to plot group-wise 
    confidence intervals.
  * Bg() paints the background of a base R plot.
  * ABCCoords() returns the coordinates for literal positions as "bottomright",
    "topleft", etc..

UPDATED FUNCTIONS:
  * Freq will report the median class as attribute.  
  * Desc.numeric() and Desc.Date() get a new attribute include_x to prevent the
    function to return the provided argument x.