@@ -12,6 +12,9 @@ UPDATED FUNCTIONS:
     Further the alternatives have been reduced to c("two.sided", "one.sided") 
     instead of c("two.sided", "increasing", "decreasing"), which were poorly defined.
   * BoxedText gains a formula interface.  
+  * RevCode takes dots now, for reverse numeric codes.
+  * Gmean will now report NA whenever there is a negative value in vector x, 
+    despite if x also contains zero (like SAS).
   
 BUGFIXES:
   * JonckheereTest's formula interface will now also support additional 
